; ModuleID = '/home/carl/AnghaBench/linux/lib/extr_klist.c_add_head.c'
source_filename = "/home/carl/AnghaBench/linux/lib/extr_klist.c_add_head.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.klist = type { i32, i32 }
%struct.klist_node = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.klist*, %struct.klist_node*)* @add_head to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_head(%struct.klist* %0, %struct.klist_node* %1) #0 {
  %3 = alloca %struct.klist*, align 8
  %4 = alloca %struct.klist_node*, align 8
  store %struct.klist* %0, %struct.klist** %3, align 8
  store %struct.klist_node* %1, %struct.klist_node** %4, align 8
  %5 = load %struct.klist*, %struct.klist** %3, align 8
  %6 = getelementptr inbounds %struct.klist, %struct.klist* %5, i32 0, i32 0
  %7 = call i32 @spin_lock(i32* %6)
  %8 = load %struct.klist_node*, %struct.klist_node** %4, align 8
  %9 = getelementptr inbounds %struct.klist_node, %struct.klist_node* %8, i32 0, i32 0
  %10 = load %struct.klist*, %struct.klist** %3, align 8
  %11 = getelementptr inbounds %struct.klist, %struct.klist* %10, i32 0, i32 1
  %12 = call i32 @list_add(i32* %9, i32* %11)
  %13 = load %struct.klist*, %struct.klist** %3, align 8
  %14 = getelementptr inbounds %struct.klist, %struct.klist* %13, i32 0, i32 0
  %15 = call i32 @spin_unlock(i32* %14)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @list_add(i32*, i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
